force-app/main/default/objects/Request_Tracker__c/Request_Tracker__c.object-meta.xml
<CustomObject>
    <description
  >Object to store transaction processing and detail information.</description>
    <label>Request Tracker</label>
    <nameField>
        <label>Trace Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>