force-app/main/default/objects/Request_Tracker__c/fields/End_Time_Epoch__c.field-meta.xml
<CustomField>
    <fullName>End_Time_Epoch__c</fullName>
    <label>End Time Epoch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>