force-app/main/default/objects/Request_Tracker__c/fields/Platform_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Name__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>