force-app/main/default/objects/Request_Tracker__c/fields/Quiddity__c.field-meta.xml
<CustomField>
    <fullName>Quiddity__c</fullName>
    <description>Request Quiddity</description>
    <label>Quiddity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>