force-app/main/default/objects/Request_Tracker__c/fields/Trace_Id__c.field-meta.xml
<CustomField>
    <fullName>Trace_Id__c</fullName>
    <externalId>true</externalId>
    <label>Trace Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>